--- a/public/views/index.html
+++ b/public/views/index.html
@@ -74,7 +74,7 @@
                   return false; }" type="number"/>
               </div>
               <div>
-                <label>short break</label>
+                <label class="temp">short break</label>
                 <input id="setting-timer-input2" min="0"onkeyup="if(parseInt(this.value)<0){ this.value =0; 
                   return false; }" type="number"/>
               </div>
