--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -7,9 +7,10 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
+  overflow: auto;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position:center;
   background-size: cover;
   background: rgba(56, 31, 140, 1); /* Old Browsers */
   background: -moz-linear-gradient(
@@ -190,7 +191,7 @@ body {
 .setting-board {
   z-index: 100;
   background-color: #ffffff;
-  position: fixed; /* could be absolute */
+  position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
